--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ jobs:
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
-        AWS_S3_BUCKET: ${{ "csc301a1" }}
-        AWS_ACCESS_KEY_ID: ${{ "AKIAYQ5HZXTK47HUW2UF" }}
-        AWS_SECRET_ACCESS_KEY: ${{ "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" }}
+        AWS_S3_BUCKET: ${{ csc301a1 }}
+        AWS_ACCESS_KEY_ID: ${{ AKIAYQ5HZXTK47HUW2UF }}
+        AWS_SECRET_ACCESS_KEY: ${{ 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 }}
         AWS_REGION: 'ca-central-1'
         SOURCE_DIR: 'public'      # optional: defaults to entire repository
