--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: jakejarvis/s3-sync-action@master
       with:
-        args: --acl public-read --follow-symlinks --delete
+        args: --acl --follow-symlinks --delete
       env:
         AWS_S3_BUCKET: 'csc301a1'
         AWS_ACCESS_KEY_ID: 'AKIAYQ5HZXTK47HUW2UF'
