Try another github actions example to deploy s3

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,55 @@
-name: Deploy Website to S3
-
+name: S3 Deploy
 on:
   pull_request:
     branches: [ main ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
 jobs:
-  deploy:
+  run:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: 'AKIAYQ5HZXTK47HUW2UF'
+      AWS_SECRET_ACCESS_KEY: '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'
     steps:
-    - uses: actions/checkout@master
-    - uses: jakejarvis/s3-sync-action@master
-      with:
-        args: --acl --follow-symlinks --delete
-      env:
-        AWS_S3_BUCKET: 'csc301a1'
-        AWS_ACCESS_KEY_ID: 'AKIAYQ5HZXTK47HUW2UF'
-        AWS_SECRET_ACCESS_KEY: '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'
-        AWS_REGION: 'ca-central-1'
-        SOURCE_DIR: 'public'      # optional: defaults to entire repository
+        - uses: actions/checkout@v2
+
+        - name: Install dependencies
+          run: npm i
+
+        - name: Build
+          run: npm build
+
+        - name: Deploy
+          uses: reggionick/s3-deploy@v3
+          with:
+            folder: build
+            bucket: ${{ secrets.S3_BUCKET }}
+            bucket-region: ${{ secrets.S3_BUCKET_REGION }}
+#             dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+#             invalidation: /
+#             delete-removed: true
+#             no-cache: true
+#             private: true
+
+# name: Deploy Website to S3
+
+# on:
+#   pull_request:
+#     branches: [ main ]
+#   # Allows you to run this workflow manually from the Actions tab
+#   workflow_dispatch:
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@master
+#     - uses: jakejarvis/s3-sync-action@master
+#       with:
+#         args: --acl --follow-symlinks --delete
+#       env:
+#         AWS_S3_BUCKET: 'csc301a1'
+#         AWS_ACCESS_KEY_ID: 
+#         AWS_SECRET_ACCESS_KEY: 
+#         AWS_REGION: 'ca-central-1'
+#         SOURCE_DIR: 'public'      # optional: defaults to entire repository
