--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,11 @@ jobs:
       AWS_SECRET_ACCESS_KEY: '//YxsnLjDMPB/5XQa+tw+VSBBF9WliYVEMFU9Hyn'
     steps:
         - uses: actions/checkout@v2
-
+        - uses: actions/setup-node@v2
+          with:
+            node-version: '12'
         - name: Install dependencies
-          run: npm i
+          run: npm install
 
         - name: Build
           run: npm build
