--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
           uses: reggionick/s3-deploy@v3
           with:
             folder: build
-            bucket: ${{ secrets.S3_BUCKET }}
-            bucket-region: ${{ secrets.S3_BUCKET_REGION }}
+            bucket: 'csc301a1'
+            bucket-region: 'ca-central-1'
 #             dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
 #             invalidation: /
 #             delete-removed: true
