--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ jobs:
             node-version: '12'
         - name: Install dependencies
           run: npm install
-
+        - name: Install npx
+          run: npm install -g npx
         - name: Build
           run: npm build
 
