--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,16 +12,13 @@ jobs:
       AWS_SECRET_ACCESS_KEY: '//YxsnLjDMPB/5XQa+tw+VSBBF9WliYVEMFU9Hyn'
     steps:
         - uses: actions/checkout@v2
-        - uses: actions/setup-node@v2
-          with:
-            node-version: '12'
+        
         - name: Install dependencies
-          run: npm install
-        - name: Install npx
-          run: npm install -g npx
+          run: yarn
+        
         - name: Build
-          run: npm build
-
+          run: yarn build
+          
         - name: Deploy
           uses: reggionick/s3-deploy@v3
           with:
