--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,11 @@ on:
   workflow_dispatch:
 
 jobs:
+  
   build:
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./checkout-cart
     
     strategy:
       matrix:
@@ -22,12 +25,15 @@ jobs:
     - name: yarn Install
       run: |
         yarn install
+      working-directory: ${{ env.working-directory }}
     - name: Staging Build
       run: |
         yarn build
+      working-directory: ${{ env.working-directory }}
     - name: Unit Tests
       run: |
         yarn test
+      working-directory: ${{ env.working-directory }}
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
       with:
@@ -37,4 +43,4 @@ jobs:
         AWS_ACCESS_KEY_ID: 'AKIAYQ5HZXTK47HUW2UF'
         AWS_SECRET_ACCESS_KEY: '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'
         AWS_REGION: 'ca-central-1'
-        SOURCE_DIR: "build"
+#         SOURCE_DIR: ${{ env.working-directory }} + "/build"
