--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,4 @@ jobs:
         AWS_ACCESS_KEY_ID: 'AKIAYQ5HZXTK47HUW2UF'
         AWS_SECRET_ACCESS_KEY: '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'
         AWS_REGION: 'ca-central-1'
-#         SOURCE_DIR: ${{ env.working-directory }} + "/build"
+        SOURCE_DIR: "build"
