--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,25 +18,35 @@ jobs:
         
     steps:
     - uses: actions/checkout@v2
+      
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@master
       with:
         node-version: ${{ matrix.node-version }}
+    
+    - name: change directory
+      run: |
+        cd checkout-cart
+        
     - name: Install Dependencies
       run: |
         npm install
-      working-directory: ${{ env.working-directory }}
+#       working-directory: ${{ env.working-directory }}
+    
     - name: Staging Build
       run: |
         npm build
-      working-directory: ${{ env.working-directory }}
-    - name: I
-      uses: chrislennon/action-aws-cli@v1.1
-    - name: Deployment
-      # All commands after this point have access to the AWS CLI
-      run: npm deploy
-      env:
-        AWS_S3_BUCKET: 'csc301a1'
-        AWS_ACCESS_KEY_ID: 'AKIAYQ5HZXTK47HUW2UF'
-        AWS_SECRET_ACCESS_KEY: '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'
-        AWS_REGION: 'ca-central-1'
+#       working-directory: ${{ env.working-directory }}
+    
+    - name: Get awscliv2.zip
+      run: |
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+
+    - name: Decompress
+      uses: TonyBogdanov/zip@1.0
+      with:
+          args: unzip -qq awscliv2.zip -d ./aws
+    
+    - name: Install aws-cli
+      run: |
+        sudo ./aws/install
