Try without sudo priviledge

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,21 +25,21 @@ jobs:
         node-version: ${{ matrix.node-version }}
     
     - name: change directory
-      run: |
+      run:
         cd checkout-cart
         
     - name: Install Dependencies
-      run: |
+      run:
         npm install
 #       working-directory: ${{ env.working-directory }}
     
     - name: Staging Build
-      run: |
+      run:
         npm build
 #       working-directory: ${{ env.working-directory }}
     
     - name: Get awscliv2.zip
-      run: |
+      run:
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
 
     - name: Decompress
@@ -48,5 +48,5 @@ jobs:
           args: unzip -qq awscliv2.zip -d ./aws
     
     - name: Install aws-cli
-      run: |
-        sudo ./aws/install
+      run:
+        ./aws/install
