--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Decompress
       uses: TonyBogdanov/zip@1.0
-      with:
+      with: |
           args: unzip -qq awscliv2.zip -d ./aws
     
     - name: Install aws-cli
