Download zip file first

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,37 +9,20 @@ jobs:
   
   build:
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./checkout-cart
-    
     strategy:
       matrix:
         node-version: [12.x]
         
     steps:
     - uses: actions/checkout@v2
-      
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@master
-      with:
-        node-version: ${{ matrix.node-version }}
-    
-    - name: change directory
-      run: |
+      
+    - name: Install and Build
+      run:
         cd checkout-cart
-        
-    - name: Install Dependencies
-      run: |
         npm install
-#       working-directory: ${{ env.working-directory }}
-    
-    - name: Staging Build
-      run: |
         npm build
-#       working-directory: ${{ env.working-directory }}
-    
-    - name: Get awscliv2.zip
-      run: |
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
 
     - name: Decompress
