--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install aws-cli
       run: |
         cd checkout-cart &&
-        apt-get install -y unzip &&
+        sudo apt-get install -y unzip &&
         unzip "./awscliv2.zip" &&
         chmod +x ./aws/install &&
         ./aws/install
