--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
         sudo apt-get install -y unzip &&
         unzip "./awscliv2.zip" &&
         chmod +x ./aws/install &&
-        ./aws/install
+        sudo ./aws/install
