--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,6 @@ jobs:
         sudo apt-get install -y unzip &&
         unzip "./awscliv2.zip" &&
         chmod +x ./aws/install &&
-        sudo ./aws/install
+        sudo ./aws/install &&
+        aws s3 sync build/ s3://csc301a1 --acl public-read
+
