Specify build's relative path

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Install aws-cli
       run: |
         cd checkout-cart &&
-        aws s3 sync build/ s3://csc301a1 --acl public-read
+        aws s3 sync ./build/ s3://csc301a1 --acl public-read
 
