--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,16 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@master
       
-    - name: Install and Build
+    - name: Install Dependencies
       run:
         cd checkout-cart &&
         npm install &&
-        npm build &&
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "./awscliv2.zip"
     
     - name: Install aws-cli
       run: |
         cd checkout-cart &&
         echo $PWD &&
+        npm run build &&
         aws s3 sync ./build/ s3://csc301a1 --acl public-read
 
