--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,28 @@ jobs:
         echo $PWD &&
         npm run build &&
         aws s3 sync ./build/ s3://csc301a1 --acl public-read
+      - uses: chrislennon/action-aws-cli@v1.1
+      # All commands after this point have access to the AWS CLI
+      - run: aws s3 ls
+        env:ame: Upload Website
+
+on:
+  push:
+    branches:
+    - master
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --delete
+      env:
+        AWS_S3_BUCKET: 'csc301a1'
+        AWS_ACCESS_KEY_ID: 'AKIAYQ5HZXTK47HUW2UF'
+        AWS_SECRET_ACCESS_KEY: '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'
+        AWS_REGION: 'ca-central-1'
+
 
