--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,9 @@ jobs:
         npm run build &&
         aws s3 sync ./build/ s3://csc301a1 --acl public-read
       env:
-        AWS_S3_BUCKET: 'csc301a1'
-        AWS_ACCESS_KEY_ID: 'AKIAYQ5HZXTK47HUW2UF'
-        AWS_SECRET_ACCESS_KEY: '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'
-        AWS_REGION: 'ca-central-1'
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
 
 
