--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build App
       run: |
         cd checkout-cart &&
-        npm run build &&
+        npm run build
     
     - name: Deploy to S3
       run: |
