--- a/checkout-cart/package.json
+++ b/checkout-cart/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "nanoid": "^3.1.20",
     "react": "^17.0.1",
@@ -14,6 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "test": "node src/test/test.js",
     "deploy": "aws s3 sync build/ s3://csc301a1 --acl public-read"
   },
   "eslintConfig": {
