--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Build frontend
-        run: cd checkout-cart && npm build
+        run: cd checkout-cart && npm run-script build
       
       - name: Test Server
         run: cd checkout-cart && npm test
