Add testing backend script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,11 @@ jobs:
         cd checkout-cart &&
         npm run build
     
+    - name: Test Backend
+      run:
+        cd checkout-cart &&
+        npm run test
+    
     - name: Deploy to S3
       run: |
         cd checkout-cart &&
