--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -2,9 +2,11 @@ name: Build
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Triggers the workflow on push or pull request events but only for the dev branch
   pull_request:
-    branches: [ dev ]  
+    branches: [ dev ]
+  push:
+    branches: [ dev ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
