--- a/checkout-cart/package.json
+++ b/checkout-cart/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.4.0",
     "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "nanoid": "^3.1.20",
